build/overlays/prod/gitprovider-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitprovider-deployment
spec:
  template:
    spec:
      containers:
        - name: gitprovider
