build/overlays/prod/sql-proxy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-deployment
spec:
  template:
    spec:
      containers:
        - name : cloud-sql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.17
          command:
            - "/cloud_sql_proxy"

            # If connecting from a VPC-native GKE cluster, you can use the
            # following flag to have the proxy connect over private IP
            # - "-ip_address_types=PRIVATE"

            # Replace DB_PORT with the port the proxy should listen on
            # Defaults: MySQL: 3306, Postgres: 5432, SQLServer: 1433
            - "-instances=kubetest-279110:us-central1:mysql8-prod=tcp:3306"
          securityContext:
            # The default Cloud SQL proxy image runs as the
            # "nonroot" user and group (uid: 65532) by default.
            runAsNonRoot: true
