build/overlays/prod/kong-proxy-ip-patch.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: kong-proxy
spec:
  loadBalancerIP: 34.68.25.129
