build/overlays/prod/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy
  namespace: apolicy
spec:
  selector:
    version: 'c000000'
